# poembooks

./: .gitignore  Cargo.toml  Dockerfile  poembooks-deployment.yaml
src/: db.rs  main.rs
src/models/: book.rs  book_model.rs
src/routers/: book_routers.rs  mod.rs
